--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/SimuladorUniversal/FileContentIndex/61b4ef84-7730-4cd7-a8cd-41b026c792f8.vsidx
+/.vs/SimuladorUniversal/FileContentIndex/b06d9f1f-550b-4ff0-bc54-542bb5a79dd4.vsidx
