--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 /.vs/SimuladorUniversal/FileContentIndex/61b4ef84-7730-4cd7-a8cd-41b026c792f8.vsidx
 /.vs/SimuladorUniversal/FileContentIndex/b06d9f1f-550b-4ff0-bc54-542bb5a79dd4.vsidx
+/.vs/SimuladorUniversal/FileContentIndex/172d9318-e4ad-44a8-95fb-71859ceb03bc.vsidx
+/.vs/SimuladorUniversal/FileContentIndex/2f54f9ed-eafd-4ee4-ade2-2d23a04581cc.vsidx
+/.vs/SimuladorUniversal/FileContentIndex
